header spacing fix

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -92,10 +92,9 @@
             .menu-item{
                 padding:40px 35px;
                 @include responsive(md){
-                    padding:20px 0;
+                    padding:20px 0px;
                 }
                 &>a{
-                    padding: 20px;
                     font-size:18px;
                     text-transform:uppercase;
                     color:#000;
@@ -108,7 +107,7 @@
                     &.active{
                         text-shadow:0 0 0.8px #000;
                     }
-                    @include responsive(sm){
+                    @include responsive(md){
                         padding: 0px 20px;
                     }
                 }
@@ -144,7 +143,7 @@
                         }
                         .menu-col{
                             flex: 0 0 25%;
-                            @include responsive (sm){
+                            @include responsive (md){
                                 
                                 padding-left: 10px;
                             }
@@ -166,7 +165,7 @@
                                 }
                                 .child-menu{
                                     margin-top:20px;
-                                    @include responsive (sm){
+                                    @include responsive (md){
                                         margin-top:10px;
                                         margin-bottom: 20px;
                                         padding-left: 10px;
